fixed alignment

--- a/frontend/deploy/style.css
+++ b/frontend/deploy/style.css
@@ -105,6 +105,7 @@
 .resume-block {
   display: flex;
   flex-direction: column;
+  align-items: center;
   border-left-style: solid;
   border-left-width: 10px;
   border-image: linear-gradient(45deg, #ED6E36, #7C0B95)1;
@@ -151,7 +152,7 @@
   display: flex;
   flex-direction: column;
   /* justify-content: flex-start; */
-  align-items: flex-start;
+  align-items: center;
 }
 
 
